# MolecularBiology

./: .gitignore  CMakeLists.txt  README.md
HMMAlign/: simpleFSA.py  viterbi.py
Neddleman-Wunsch/: CMakeLists.txt  Neddleman-Wunsch.cpp  Neddleman-Wunsch.h
Neddleman-Wunsch/Neddleman-Wunsch/: alineamientos.txt  pointMatrix.txt
Profiles/: CMakeLists.txt  Profiles.cpp  Profiles.h
SmithWaterman/: Alignments.h  CMakeLists.txt  Sequencias.txt  SmithWaterman.cpp  SmithWaterman.h
Star_MSA/: CMakeLists.txt  Star_MSA.cpp  Star_MSA.h
Star_MSA_one/: Alignments.h  BRCA1.txt  CMakeLists.txt  Star_MSA.cpp  Star_MSA.h  Utils.h  clusters.py
StructurePrediction/: CMakeLists.txt  StructurePrediction.cpp  StructurePrediction.h
