# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("BioinformaticsAlgorithms")

# Include sub-projects.
#add_subdirectory ("Neddleman-Wunsch")
#add_subdirectory ("SmithWaterman")
#add_subdirectory ("Star_MSA")
add_subdirectory ("Star_MSA_one")